Added a button in the index.html file

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <button>
     <a href="https://youtube.com"target="_blank">TO YOUTUBE</a>
 </button>
+<button>UPDATE BUTTON</button>
 <button>
     <a href="http://emobilis.ac.ke"target="_blank">TO EMOBILIS</a>
 </button>
